# kamodo-geometry

./: README.md  WorkLog.md  setup.cfg
.github/workflows/: python-package.yml
geometry/: coordinates.py  space.py
kamodo_geometry/: coordinates.py  space.py
