[metadata]
name = kamodo_geometry
version = 0.1
author = Asher Pembroke
author_email = apembroke@gmail.com
description = A functional api for coordinate transformations
url = https://github.com/ensemblegov/kamodo-geometry
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.7
	Operating System :: OS Independent
	License :: OSI Approved
license = NASA OPEN SOURCE AGREEMENT VERSION 1.3


[options]
packages = kamodo_geometry
python_requires = >= 3.6
include_package_data = True
install_requires =
  kamodo-core